# cpuid2cpuflags

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  deny.toml  mise.toml  release-plz.toml  renovate.json  rustfmt.toml
.woodpecker/: ci.yaml  release-plz.yaml  release.yaml
src/: error.rs  flags.rs  lib.rs  main.rs
src/detect/: mock.rs  mod.rs  x86.rs
src/tables/: mod.rs  x86.rs
tests/: integration.rs  mock_tests.rs
