[package]
name          = "cpuid2cpuflags"
version       = "0.1.1"
edition       = "2024"
rust-version  = "1.85"
license       = "GPL-2.0-or-later"
description   = "Detect CPU capabilities and output Gentoo CPU_FLAGS_* for package.use"
readme        = "README.md"
repository    = "https://github.com/sm-moshi/cpuid2cpuflags"
documentation = "https://docs.rs/cpuid2cpuflags"
keywords      = ["cpu", "cpuflags", "gentoo", "cpuid", "hwcap"]
categories    = ["command-line-utilities", "hardware-support"]
exclude       = [".claude/", ".github/", ".woodpecker/", ".vscode/"]

[[bin]]
name              = "cpuid2cpuflags"
path              = "src/main.rs"
required-features = ["cli"]

[dependencies]
thiserror = "2"

# CLI (optional)
clap   = { version = "4.6.0", features = ["derive"], optional = true }
anyhow = { version = "1.0.102", optional = true }

# Serialisation (optional)
serde = { version = "1.0.228", features = ["derive"], optional = true }

# hwcap access on Linux (ARM, PPC, RISC-V)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.183"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd        = "2.2.0"
predicates        = "3.1.4"

[features]
default = ["cli", "cflags"]
cli     = ["dep:clap", "dep:anyhow"]
cflags  = []
serde   = ["dep:serde"]
riscv   = []
dump    = []

[lints.clippy]
all                     = { level = "warn", priority = -1 }
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "deny"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = "s"
debug         = false
strip         = "symbols"

[profile.dev]
opt-level = 1
debug     = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
